Fix to IPB block collapsed info styling so that expanded info doesn't peek above in some cases. Overall that messaging block needs some more styling tweaks though to match other message blocks. Will create separate issues to track that.

--- a/BlazarUI/app/stylus/components/inter-project-alert.styl
+++ b/BlazarUI/app/stylus/components/inter-project-alert.styl
@@ -17,6 +17,7 @@
   background-color #e1e4f6
   border none
   position relative
+  border 1px solid $color-thunderdome-medium
 
   a
     color #00a4bd
@@ -50,7 +51,7 @@
 
   .inter-project-alert__summary
     display block
-    margin-bottom 20px
+    margin-bottom 24px
 
     .inter-project-alert__build-number
       color $color-eerie
